add input field and button

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="style.css " rel="stylesheet">
 </head>
 <body>
     <h1>Number convertor</h1>
-    <div></div>
-    <textarea name="inText" id="1" cols="30" rows="10"></textarea>
-    <textarea name="outText" id="2" cols="30" rows="10"></textarea>
+    <div>
+        Input roman number to conver in arabic number.
+    </div>
+    <div class="inOutField">
+        <textarea name="inText" id="1" cols="30" rows="10"></textarea>
+        <button class="btn btn_conv">Convert</button>
+        <textarea name="outText" id="2" cols="30" rows="10"></textarea>
+    </div>
+
 </body>
 </html>
