--- a/templates/index.html
+++ b/templates/index.html
@@ -10,18 +10,17 @@
 <body>
     <h1>Number convertor</h1>
     <div>
-        Input roman number to conver in arabic number.
+        Input roman number to conver in arabic number. Max value for number 3999
     </div>
-    <div class="inOutField">
-        <form action="{{ url_for('index') }}" method = 'POST'>
-            {{ csrf_token }}
-            <textarea name="inText" id="1" cols="30" rows="10" resize = none></textarea>
-            <input type="submit" value="Convert">
-            <textarea name="outText" disabled=disabled id="2" cols="30" rows="10">{{ result }}    
-             </textarea>
-       
-        </form>
-    </div>
+    
+    <form class="inOutField" action="{{ url_for('index') }}" method = 'POST'>
+        {{ csrf_token }}
+        <textarea name="inText" id="1" cols="30" rows="10" resize = none></textarea>
+        <input type="submit" value="Convert">
+        <textarea name="outText" disabled=disabled id="2" cols="30" rows="10">{{ result }}    
+            </textarea>
+    
+    </form>
 
 </body>
 </html>
