Added db and recorected check rom_number

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link href="{{ url_for('static', filename='s10.css') }} " rel="stylesheet">
+    <link href="{{ url_for('static', filename='styles.css') }} " rel="stylesheet">
 </head>
 <body>
     <h1>Number convertor</h1>
